# valy

./: .gitignore  pyproject.toml  run_video_stream.py
.github/workflows/: ruff-style.yaml
valy/: __init__.py  settings.py
valy/meta/: __init__.py  meta_display.py  meta_frame.py  meta_objects.py  meta_stream.py
valy/models/object_detector/yolov5/: yolov5.py
valy/pipelines/: pipeline.py
valy/pipelines/display/: display_pipeline.py
valy/pipelines/inferences/object_detector/yolov5/: yolov5.py
valy/pipelines/inputs/: file_stream.py  input_pipeline.py  inputs_pipeline.py
