[tool.poetry]
name = "valy"
version = "0.1.0"
description = ""
authors = ["z430 <maystya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.17"
opencv-python = "^4.8.0.76"
vidgear = "0.3.2"
loguru = "^0.7.1"
imutils = "^0.5.4"
black = "^23.9.1"

[tool.poetry.dev-dependencies]
ruff = { version = "^0.0.287", python = ">=3.8.17" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
